[project]
name = "agentic-blog"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.121.0",
    "langchain>=1.0.4",
    "langchain-cli[inmem]>=0.0.37",
    "langchain-community>=0.4.1",
    "langchain-core>=1.0.3",
    "langchain-groq>=1.0.0",
    "langgraph>=1.0.2",
    "uvicorn>=0.38.0",
    "watchdog>=6.0.0",
]
